--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gaurav Saha</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=JetBrains+Mono:ital,wght@1,500&family=Sevillana&family=Texturina:ital,wght@1,600&display=swap" rel="stylesheet">
@@ -15,24 +15,24 @@
 
 <body>
     <div class="top">
-        <img class="cloud" id="cloud-1" src='images\cloud.png' alt="Clod Image">
+        <img class="cloud" id="cloud-1" src='cloud.png' alt="Clod Image">
         <h1 class="name">Hi, I'm Gaurav</h1>
         <p class="about"><em>A web Developer and a ML Enthusiast</em></p>
-        <img class="cloud" id="cloud-2" src='images\cloud.png' alt="Clod Image">
+        <img class="cloud" id="cloud-2" src='cloud.png' alt="Clod Image">
         <br>
-        <img src='images/mountain.png' alt="Mountain Image">
+        <img src='mountain.png' alt="Mountain Image">
     </div>
 
     <div class="middle-container">
         <div class="profile">
-            <img class="picture" src="images\Gaurav.jpg" alt="Profile Picture">
+            <img class="picture" src="Gaurav.jpg" alt="Profile Picture">
             <h2 class="intro">Hello</h2>
             <p>Currently a 4th Year Undergrad in RCCIIT. I'm a Web Developer and Machine Learning Enthusiast.</p>
         </div>
         <div class="skills">
             <h2 class='intro' id='skill'>My Skills</h2>
             <div class="skill-row" id='skill-row-1'>
-                <img class="skill-pic-1" src="images\computer1.jpg" alt="">
+                <img class="skill-pic-1" src="computer1.jpg" alt="">
                 <div>
                     <h3 style="color:#682c0e;">Web Development</h3>
                     <p class="desc">Have experience working with various web development tools like HTML, CSS, JavaScript, Node, Express, React</p>
@@ -46,7 +46,7 @@
                     <h3 style="color:#0a043c;" ">Machine Learning</h3>
                     <p class="desc ">Have worked on object recognition and text prediction projects and have experience implementing various ML Algorithms from scratch without using libraries.</p>
                 </div>
-                <img class="skill-pic-1 " src="images\computer2.png " alt=" ">
+                <img class="skill-pic-1 " src="computer2.png " alt=" ">
             </div>
         </div>
         <hr>
