--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="top">
         <img class="cloud" id="cloud-1" src='cloud.png' alt="Clod Image">
         <h1 class="name">Hi, I'm Gaurav</h1>
-        <p class="about"><em>A web Developer and a ML Enthusiast</em></p>
+        <p class="about"><em>A web Developer and an ML Enthusiast</em></p>
         <img class="cloud" id="cloud-2" src='cloud.png' alt="Clod Image">
         <br>
         <img src='mountain.png' alt="Mountain Image">
